correct right aligns logout and admin panel buttons

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -51,8 +51,12 @@ header {
         vertical-align: top;
       }
     }
+
     .right-align {
-      margin-left: auto;
+      width: 100%;
+      justify-content: flex-end;
+      display: flex;
+      flex-direction: row;
     }
   }
 }
